--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 </head>
 <body>
     <div class="App">
-        <header></header>
-        <document>
-            <!-- so many sections -->
-        </document>
-        <footer></footer>
+        <header class="header">
+            <h1 class="header_title">MOTION</h1>
+            <ul class="control-pannel">
+                <li><button id="new-image" class="create-button">Image</button></li>
+                <li><button id="new-video" class="create-button">Video</button></li>
+                <li><button id="new-note" class="create-button">Note</button></li>
+                <li><button id="new-task" class="create-button">Task</button></li>
+            </ul>
+        </header>
+        <main class="document"></main>
+        <footer class="footer">
+            <p>© Copyright by Dream Coding Academy. All rights reseved.</p>
+        </footer>
     </div>
 </body>
 </html>
